hello world html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <body>
-        <p> Before the script... </p>
-        <script src="./script.js"></script>
-        <p> ...After the script. </p>
+        <title> Hello, world! </title>
+        <p> Hello, world! </p>
+        <script src="./script.js"> </script>
     </body>
 </html>
