walking the dom

--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
         <title> Hello, world! </title>
         <p> Hello, world! </p>
         <script src="./script.js"> </script>
+        
+        <div>Users:</div>
+        <ul>
+        	<li>John</li>
+        	<li>Pete</li>
+        </ul>
     </body>
 </html>
