basic dom node properties

--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE HTML>
 <html>
-    <body>
-        <title> Hello, world! </title>
-        <p> Hello, world! </p>
-        <script src="./script.js"> </script>
-        
-        <div>Users:</div>
-        <ul>
-        	<li>John</li>
-        	<li>Pete</li>
-        </ul>
-    </body>
-</html>
+<body>
+  <ul>
+    <li>Animals
+      <ul>
+        <li>Mammals
+          <ul>
+            <li>Cows</li>
+            <li>Donkeys</li>
+            <li>Dogs</li>
+            <li>Tigers</li>
+          </ul>
+        </li>
+        <li>Other
+          <ul>
+            <li>Snakes</li>
+            <li>Birds</li>
+            <li>Lizards</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>Fishes
+      <ul>
+        <li>Aquarium
+          <ul>
+            <li>Guppy</li>
+            <li>Angelfish</li>
+          </ul>
+        </li>
+        <li>Sea
+          <ul>
+            <li>Sea trout</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</body>
+</html> 
